swagger config in recommendation controller
